--- a/Testing files/graph_plotter.ipynb
+++ b/Testing files/graph_plotter.ipynb
@@ -91,7 +91,7 @@
    ],
    "source": [
     "cnn_model = Sequential([\n",
-    "    Embedding(input_dim=vocab_size,output_dim=32, input_length=300),\n",
+    "    Embedding(input_dim=626,output_dim=32, input_length=300),\n",
     "    \n",
     "    Conv1D(16, 4, padding='same', activation='relu', kernel_regularizer=tf.keras.regularizers.l2(1e-4)),\n",
     "    BatchNormalization(),\n",
